--- a/index_en.html
+++ b/index_en.html
@@ -26,7 +26,7 @@
 						<li><a href="#two" class="button icon solid fa-chevron-down scrolly">Learn More</a></li>
 					</ul>
 				</div>
-				<div class="image phone"><div class="inner"><img src="images/bao.png" alt="" /></div></div>
+				<div class="image phone"><div class="inner"><img src="images/Bao.png" alt="" /></div></div>
 			</header>
 
 
