--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<h1>堡堡说</h1>
 					<p>基于<a href="https://github.com/PlayVoice/so-vits-svc-5.0" target="_blank">so-vits-svc</a>的音色转换</p>
 					<ul class="actions">
-						<li><a href="#" class="button primary icon solid fa-download">Windows下载</a></li>
-                        <li><a href="#" class="button primary icon solid fa-download">macOS下载</a></li>
+						<li><a href="QAQ.html" class="button primary icon solid fa-download">Windows下载</a></li>
+                        <li><a href="https://github.com/zwzheng45/JJsays/releases/download/0.0.0/JJsays.app.zip" class="button primary icon solid fa-download">macOS下载</a></li>
 						<li><a href="#two" class="button icon solid fa-chevron-down scrolly">了解更多</a></li>
 					</ul>
 				</div>
@@ -63,9 +63,9 @@
 					<p>基于<a href="https://github.com/PlayVoice/so-vits-svc-5.0" target="_blank">so-vits-svc</a>的高质量音色转换工具</p>
 				</header>
 				<ul class="actions special">
-					<li><a href="#" class="button primary icon solid fa-download">Windows下载</a></li>
-                    <li><a href="#" class="button primary icon solid fa-download">macOS下载</a></li>
-					<li><a href="#" class="button">源代码（Github）</a></li>
+					<li><a href="QAQ.html" class="button primary icon solid fa-download">Windows下载</a></li>
+                    <li><a href="https://github.com/zwzheng45/JJsays/releases/download/0.0.0/JJsays.app.zip" class="button primary icon solid fa-download">macOS下载</a></li>
+					<li><a href="https://github.com/zwzheng45/JJsays" target="_blank" class="button">源代码（Github）</a></li>
 				</ul>
 			</section>
 
