--- a/index_en.html
+++ b/index_en.html
@@ -21,8 +21,8 @@
 					<h1>JJsays</h1>
 					<p><a href="https://github.com/PlayVoice/so-vits-svc-5.0" target="_blank">so-vits-svc</a> based timbre conversion</p>
 					<ul class="actions">
-						<li><a href="#" class="button primary icon solid fa-download">Windows Download</a></li>
-                        <li><a href="#" class="button primary icon solid fa-download">macOS Download</a></li>
+						<li><a href="QAQ_en.html" class="button primary icon solid fa-download">Windows Download</a></li>
+                        <li><a href="https://github.com/zwzheng45/JJsays/releases/download/0.0.0/JJsays.app.zip" class="button primary icon solid fa-download">macOS Download</a></li>
 						<li><a href="#two" class="button icon solid fa-chevron-down scrolly">Learn More</a></li>
 					</ul>
 				</div>
@@ -63,9 +63,9 @@
 					<p><a href="https://github.com/PlayVoice/so-vits-svc-5.0" target="_blank">so-vits-svc</a> based timbre conversion</p>
 				</header>
 				<ul class="actions special">
-					<li><a href="#" class="button primary icon solid fa-download">Windows Download</a></li>
-                    <li><a href="#" class="button primary icon solid fa-download">macOS Download</a></li>
-					<li><a href="#" class="button">Source Code(Github)</a></li>
+					<li><a href="QAQ_en.html" class="button primary icon solid fa-download">Windows Download</a></li>
+                    <li><a href="https://github.com/zwzheng45/JJsays/releases/download/0.0.0/JJsays.app.zip" class="button primary icon solid fa-download">macOS Download</a></li>
+					<li><a href="https://github.com/zwzheng45/JJsays" target="_blank" class="button">Source Code(Github)</a></li>
 				</ul>
 			</section>
 
