--- a/QAQ_en.html
+++ b/QAQ_en.html
@@ -19,7 +19,7 @@
 				<div class="content" style="text-align:center">
 					<h1>QAQ</h1>
 					<p>Not ready yet</p>
-                    <a href="index_en.html" class="button primary">返回</a>
+                    <a href="index_en.html" class="button primary">Go Back</a>
 					<ul class="actions">
 					</ul>
 				</div>
