--- a/index_en.html
+++ b/index_en.html
@@ -14,7 +14,8 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-        <myButton><a href="index.html" >简体中文</a></myButton>
+        <logo><img src="images/Bao_alpha.png" alt="" width="6%"/></logo>
+        <myButton><font color="white"><a href="index.html" >简体中文</a></font></myButton>
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
@@ -23,8 +24,12 @@
 					<ul class="actions">
 						<li><a href="QAQ_en.html" class="button primary icon solid fa-download">Windows Download</a></li>
                         <li><a href="https://github.com/zwzheng45/JJsays/releases/download/0.0.0/JJsays.app.zip" class="button primary icon solid fa-download">macOS Download</a></li>
-						<li><a href="#two" class="button icon solid fa-chevron-down scrolly">Learn More</a></li>
+                        <li><a href="QAQ_en.html" class="button primary icon solid fa-download">Model and configuration file Download</a></li>
 					</ul>
+                    <ul class="actions">
+                        <li><a href="documents.html" class="button">Documentation</a></li>
+                        <li><a href="#two" class="button icon solid fa-chevron-down scrolly">Learn More</a></li>
+                    </ul>
 				</div>
 				<div class="image phone"><div class="inner"><img src="images/Bao.png" alt="" /></div></div>
 			</header>
@@ -60,11 +65,12 @@
 			<section id="three" class="wrapper style2 special">
 				<header class="major">
 					<h2>JJsays</h2>
-					<p><a href="https://github.com/PlayVoice/so-vits-svc-5.0" target="_blank">so-vits-svc</a> based timbre conversion</p>
+					<p>A high quality timbre conversion tool based on <a href="https://github.com/PlayVoice/so-vits-svc-5.0" target="_blank">so-vits-svc</a></p>
 				</header>
 				<ul class="actions special">
 					<li><a href="QAQ_en.html" class="button primary icon solid fa-download">Windows Download</a></li>
                     <li><a href="https://github.com/zwzheng45/JJsays/releases/download/0.0.0/JJsays.app.zip" class="button primary icon solid fa-download">macOS Download</a></li>
+                    <li><a href="QAQ_en.html" class="button primary icon solid fa-download">Model and configuration file Download</a></li>
 					<li><a href="https://github.com/zwzheng45/JJsays" target="_blank" class="button">Source Code(Github)</a></li>
 				</ul>
 			</section>
