--- a/index_en_old.html
+++ b/index_en_old.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>堡堡说</title>
+		<title>JJsays</title>
         <link rel="shortcut icon" href="favicon.ico" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -14,22 +14,17 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-        <logo><img src="images/Bao_alpha.png" alt="" width="6%"/></logo>
-        <myButton><font color="white"><a href="index_en.html" >English</a></font></myButton>
+        <myButton><a href="index.html" >简体中文</a></myButton>
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1>堡堡说</h1>
-					<p>基于<a href="https://github.com/PlayVoice/so-vits-svc-5.0" target="_blank">so-vits-svc</a>的音色转换</p>
+					<h1>JJsays</h1>
+					<p><a href="https://github.com/PlayVoice/so-vits-svc-5.0" target="_blank">so-vits-svc</a> based timbre conversion</p>
 					<ul class="actions">
-						<li><a href="QAQ.html" class="button primary icon solid fa-download">Windows下载</a></li>
-                        <li><a href="https://github.com/zwzheng45/JJsays/releases/download/0.0.0/JJsays.app.zip" class="button primary icon solid fa-download">macOS下载</a></li>
-                        <li><a href="QAQ.html" class="button primary icon solid fa-download">模型和必要配置文件下载</a></li>
+						<li><a href="QAQ_en.html" class="button primary icon solid fa-download">Windows Download</a></li>
+                        <li><a href="https://github.com/zwzheng45/JJsays/releases/download/0.0.0/JJsays.app.zip" class="button primary icon solid fa-download">macOS Download</a></li>
+						<li><a href="#two" class="button icon solid fa-chevron-down scrolly">Learn More</a></li>
 					</ul>
-                    <ul class="actions">
-                        <li><a href="documents.html" class="button">说明文档</a></li>
-                        <li><a href="#two" class="button icon solid fa-chevron-down scrolly">了解更多</a></li>
-                    </ul>
 				</div>
 				<div class="image phone"><div class="inner"><img src="images/Bao.png" alt="" /></div></div>
 			</header>
@@ -42,19 +37,19 @@
 					<section class="spotlight">
 						<div class="image"><img src="images/fig_1b.png" alt="" /></div>
 						<div class="content">
-							<h3>随时随地，成为堡酿</h3>
-							<p>只需输入音频文件，简单调节参数，即可在数分钟内*转为堡酿音色。</p>
+							<h3>Be James anytime, anywhere</h3>
+							<p>Just input the audio file, simply adjust the settings, and you can turn it into James' voice in minutes*.</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/puzzle.webp" alt="" object-fit="cover" /></div>
 						<div class="content">
-							<h3>原汁原味，还原本色</h3>
-							<p>模型选用高质量数据集进行4万+步训练，输出音频采样率为44100hz，<br>支持自动预测音高f0**，忠实还原堡酿本音。</p>
+							<h3>The original James voice,<br>now available on your computer</h3>
+							<p>The model uses high quality data sets for 40,000+ steps of training, with an output audio sampling rate of 44,100hz, supporting automatic pitch prediction of f0** and faithful restoration of James' original sound.</p>
 						</div>
 					</section>
                     <section class="spotlight">
-                        <p style="font-size:15px">*具体时长因设备而异<br>**仅限语音转换</p>
+                        <p style="font-size:15px">*The exact duration varies by device<br>**Voice conversion only</p>
                     </section>
 				</div>
 			</section>
@@ -64,14 +59,13 @@
 		<!-- Three -->
 			<section id="three" class="wrapper style2 special">
 				<header class="major">
-					<h2>堡堡说</h2>
-					<p>基于<a href="https://github.com/PlayVoice/so-vits-svc-5.0" target="_blank">so-vits-svc</a>的高质量音色转换工具</p>
+					<h2>JJsays</h2>
+					<p><a href="https://github.com/PlayVoice/so-vits-svc-5.0" target="_blank">so-vits-svc</a> based timbre conversion</p>
 				</header>
 				<ul class="actions special">
-					<li><a href="QAQ.html" class="button primary icon solid fa-download">Windows下载</a></li>
-                    <li><a href="https://github.com/zwzheng45/JJsays/releases/download/0.0.0/JJsays.app.zip" class="button primary icon solid fa-download">macOS下载</a></li>
-                    <li><a href="QAQ.html" class="button primary icon solid fa-download">模型和必要配置文件下载</a></li>
-					<li><a href="https://github.com/zwzheng45/JJsays" target="_blank" class="button">源代码（Github）</a></li>
+					<li><a href="QAQ_en.html" class="button primary icon solid fa-download">Windows Download</a></li>
+                    <li><a href="https://github.com/zwzheng45/JJsays/releases/download/0.0.0/JJsays.app.zip" class="button primary icon solid fa-download">macOS Download</a></li>
+					<li><a href="https://github.com/zwzheng45/JJsays" target="_blank" class="button">Source Code(Github)</a></li>
 				</ul>
 			</section>
 
