更新图标位置

--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
 				<ul class="actions special">
 					<li><a href="QAQ.html" class="button primary icon solid fa-download">Windows下载</a></li>
                     <li><a href="https://github.com/zwzheng45/JJsays/releases/download/0.0.0/JJsays.app.zip" class="button primary icon solid fa-download">macOS下载</a></li>
+                    <li><a href="QAQ.html" class="button primary icon solid fa-download">模型和必要配置文件下载</a></li>
 				</ul>
                 <ul class="actions special">
-                    <li><a href="QAQ.html" class="button primary icon solid fa-download">模型和必要配置文件下载</a></li>
+                    <li><a href="documents.html" class="button">说明文档</a></li>
                     <li><a href="https://github.com/zwzheng45/JJsays" target="_blank" class="button">源代码（Github）</a></li>
                 </ul>
 			</section>
