--- a/index_en.html
+++ b/index_en.html
@@ -70,10 +70,10 @@
 				<ul class="actions special">
 					<li><a href="QAQ_en.html" class="button primary icon solid fa-download">Windows Download</a></li>
                     <li><a href="https://github.com/zwzheng45/JJsays/releases/download/0.0.0/JJsays.app.zip" class="button primary icon solid fa-download">macOS Download</a></li>
-
+                    <li><a href="QAQ_en.html" class="button primary icon solid fa-download">Model and configuration file Download</a></li>
 				</ul>
                 <ul class="actions special">
-                    <li><a href="QAQ_en.html" class="button primary icon solid fa-download">Model and configuration file Download</a></li>
+                    <li><a href="documents.html" class="button">Documentation</a></li>
                     <li><a href="https://github.com/zwzheng45/JJsays" target="_blank" class="button">Source Code(Github)</a></li>
                 </ul>
 			</section>
