--- a/documents.html
+++ b/documents.html
@@ -31,7 +31,7 @@
                         
                         <h3>开始使用</h3>
                         <ol>
-                            <li><p>请<a href="index.html" target="_blank">下载GUI程序</a>以及<a href="#">必要的模型和配置文件</a></p></li>
+                            <li><p>请<a href="index.html" target="_blank">下载GUI程序</a>以及<a href="QAQ.html">必要的模型和配置文件</a></p></li>
                             <li><p>配置环境</p></li>
                             <h4><strong>macOS</strong><br></h4>
                             <ol>
