--- a/index.html
+++ b/index.html
@@ -399,6 +399,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		<!-- Footer -->
 			<footer id="footer">
+                <ul class="icons">
+                    <li><a href="https://github.com/zwzheng45/JJsays" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
+                    <li><a href="https://youtu.be/dQw4w9WgXcQ" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
+                    <li><a href="https://youtu.be/dQw4w9WgXcQ" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+                    <li><a href="https://youtu.be/dQw4w9WgXcQ" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+                </ul>
 				<p class="copyright">&copy; ZZW, Sherber</a></p>
 			</footer>
 
